Table style added.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 			<h1>My first web page</h1>
 	
 			<div id="first-text">	
-			<h2>What this is</h2>
+			<h2>What is it...</h2>
 			<p>A simple page put together using HTML. <em>I said a simple page put together using HTML.</em> A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML. A simple page put together using HTML.</p>
 			</div>
 		</header>
 		
 		<section class="category_black" id="why_this_is">
-			<h2>Why this is</h2>
-			<div calss="box" id="list">
+			<h2>Why is it...</h2>
+			<div class="left_side">
 				<ul>
 				    <li>To learn HTML</li>
 				    <li>To show off</li>
@@ -36,51 +36,49 @@
 		   	    	</li>
 				</ul>
 			</div>
-			<div class="box" id="test">			
-				<img src="http://redleosoft.com/images/page_image/webdevelopment1.jpg">
+			<div class="right_side">			
+				<img src="img/webdevelopment1.jpg">
 			</div>
 		</section>
 		
 		<section class="category_color" id="where_to_find">
 			<h2>Where to find the tutorial</h2> 
-			<div>
+			<div class="left_side" id="html_dog_link">
 				<a href="http://www.htmldog.com">
-					<img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog">
+					<img src="img/badge1.gif" alt="HTML Dog">
 				</a>
 			</div>
-			<div id="html_dog_text"><p>This HTML file copied from HTML Dog website. This is a grate place to learn the basics of HTML and earn some confidence while using it.</p></div>
+
+			<div class="right_side" id="html_dog_text">
+				<p>This HTML file copied from HTML Dog website. This is a grate place to learn the basics of HTML and earn some confidence while using it.</p>
+			</div>
 		</section>
 		
 		<section class="category_black" id="table">
 			
-			<h2>Some random table</h2>
+			<h2>Some random table...</h2>
 			<table>
 			    <tr>
-			        <td>Row 1, cell 1</td>
-			        <td>Row 1, cell 2</td>
-			        <td>Row 1, cell 3</td>
+			        <td><img src="https://source.unsplash.com/category/nature/"><br>Row 1, cell 1</td>
+			        <td><img src="https://source.unsplash.com/category/people/"><br>Row 1, cell 2</td>
+			        <td><img src="https://source.unsplash.com/category/"><br>Row 1, cell 3</td>
 			    </tr>
 			    <tr>
-			        <td>Row 2, cell 1</td>
-			        <td>Row 2, cell 2</td>
-			        <td>Row 2, cell 3</td>
+			        <td><img src="https://source.unsplash.com/category/nature/"><br>Row 2, cell 1</td>
+			        <td><img src="https://source.unsplash.com/category/people/"><br>Row 2, cell 2</td>
+			        <td><img src="https://source.unsplash.com/category/"><br>Row 2, cell 3</td>
 			    </tr>
 			    <tr>
-			        <td>Row 3, cell 1</td>
-			        <td>Row 3, cell 2</td>
-			        <td>Row 3, cell 3</td>
-			    </tr>
-			    <tr>
-			        <td>Row 4, cell 1</td>
-			        <td>Row 4, cell 2</td>
-			        <td>Row 4, cell 3</td>
+			        <td><img src="https://source.unsplash.com/category/nature/"><br>Row 3, cell 1</td>
+			        <td><img src="https://source.unsplash.com/category/people/"><br>Row 3, cell 2</td>
+			        <td><img src="https://source.unsplash.com/category/"><br>Row 3, cell 3</td>
 			    </tr>
 			</table>
 		</section>
 		
 		<section class="category_color" id="comment_form">
-			<h2>Some random form</h2>
-			<p><strong>Note:</strong> It looks the part, but won't do a damned thing.</p>
+			<h2>Some random form...</h2>
+			<p><strong>Note:</strong> It looks like a comment section, but won't do a damned thing.</p>
 			
 			<form action="scripts/comments.py" method="POST">
 				
